fixed layout bug

--- a/style.css
+++ b/style.css
@@ -133,5 +133,6 @@ html, body{
     #landing_text h1{
         transition: all 0.3s ease-out;
         font-size: 3.2em;
+        padding-top: 50px;
     }
 }
